--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.16.14
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 1.0.0
 	maven_group = me.gergerapex1
 	archives_base_name = RaidDrinker
 
